--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "npm run build && node server.js",
+    "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
