--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch server.ts",
     "start": "npm run build && node build/server.js",
     "build": "tsup server.ts puppeteer.ts --out-dir build",
     "test": "echo \"Error: no test specified\" && exit 1"
