--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
     "puppeteer": "^21.1.1"
