--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/view": "^8.0.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "fastify": "^4.22.2",
     "puppeteer": "^21.1.1"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.2",
     "@types/node": "^20.6.0",
     "tsup": "^7.2.0",
     "tsx": "^3.12.8",
