--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/static": "^6.11.0",
     "@fastify/view": "^8.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
