--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "npm run build && node src/server.js",
+    "start": "npm run build && node src/server.mjs",
     "build": "tsup ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
