--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "fastify": "^4.22.2",
-    "puppeteer": "^21.1.1"
+    "puppeteer": "^21.1.1",
+    "redis": "^4.6.8"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
