--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.11.0",
     "@fastify/view": "^8.0.0",
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "fastify": "^4.22.2",
+    "jsdom": "^22.1.0",
     "puppeteer": "^21.1.1",
     "redis": "^4.6.8"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
+    "@types/jsdom": "^21.1.3",
     "@types/node": "^20.6.0",
     "tsup": "^7.2.0",
     "tsx": "^3.12.8",
