--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "fastify": "^4.22.2",
+    "firebase": "^10.4.0",
     "jsdom": "^22.1.0",
     "puppeteer": "^21.1.1",
     "redis": "^4.6.8"
