--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "dev:queue": "tsx watch src/queue.ts",
     "start": "npm run build && node src/server.js",
     "build": "tsup ",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,13 +19,14 @@
     "@fastify/static": "^6.11.0",
     "@fastify/view": "^8.0.0",
     "axios": "^1.5.0",
+    "bullmq": "^4.11.4",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "fastify": "^4.22.2",
     "firebase": "^10.4.0",
     "jsdom": "^22.1.0",
     "puppeteer": "^21.1.1",
-    "redis": "^4.6.8"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
