--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,9 @@
-node_modules
 .git
-*Dockerfile*
+.gitignore
+node_modules
+npm-debug.log
+Dockerfile*
+docker-compose*
+README.md
+LICENSE
+.vscode
