--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "dev:queue": "tsx watch src/queue.ts",
-    "start": "npm run build && node src/server.js",
-    "build": "tsup ",
+    "start": "node src/server.js",
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,11 +19,13 @@
     "@fastify/view": "^8.0.0",
     "axios": "^1.5.0",
     "bullmq": "^4.11.4",
+    "cron": "^3.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "fastify": "^4.22.2",
     "firebase": "^10.4.0",
     "jsdom": "^22.1.0",
+    "node-schedule": "^2.1.1",
     "puppeteer": "^21.1.1",
     "zod": "^3.22.2"
   },
@@ -32,6 +33,7 @@
     "@types/ejs": "^3.1.2",
     "@types/jsdom": "^21.1.3",
     "@types/node": "^20.6.0",
+    "@types/node-schedule": "^2.1.1",
     "tsup": "^7.2.0",
     "tsx": "^3.12.8",
     "typescript": "^5.2.2"
