--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsdom": "^22.1.0",
     "node-schedule": "^2.1.1",
     "puppeteer": "^21.1.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.2"
   },
   "devDependencies": {
